--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
 <!DOCTYPE html>
-<h1>Hello World</h1>
+<html lang="en">
+    <head>
+        <meta charset="utf-8"> 
+        <title>Lipeipei Sun</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
+
+    <body>
+        <div class="navbar">
+            <div class="navbar-ele strong">Home</div>
+            <div class="navbar-ele">Code</div>
+            <div class="navbar-ele">Design</div>
+            <div class="navbar-ele">Contact</div>
+        </div>
+    </body>
+</html>
