--- a/index.html
+++ b/index.html
@@ -8,10 +8,21 @@
 
     <body>
         <div class="navbar">
-            <div class="navbar-ele strong">Home</div>
-            <div class="navbar-ele">Code</div>
-            <div class="navbar-ele">Design</div>
-            <div class="navbar-ele">Contact</div>
+            <a href="./index.html" class="navbar-link"><strong>Home</strong></a>
+            <a href="./Code/code.html" class="navbar-link">Code</a>
+            <a href="./Design/design.html" class="navbar-link">Design</a>
+            <a href="./Contact/contac.html" class="navbar-link">Contact</a>
+        </div>
+        <div class="intro">
+            <div class="intro-title">
+                <h1>Hello & welcome!</h1>
+            </div>
+            <div class="intro-image" >
+                <img class="profile-image" src="./Images/PeipeiSun_small.jpg" alt="profile image">
+            </div>
+            <div class="intro-text">
+                <p class="">I'm Lipeipei Sun, a current master's student in Computer Science at Northeastern University, embarking on an exciting journey that bridges the creative world of architecture with the innovative realm of technology.</p>
+            </div>
         </div>
     </body>
 </html>
