--- a/Code/code.html
+++ b/Code/code.html
@@ -13,5 +13,20 @@
             <a href="../Design/design.html" class="navbar-link">Design</a>
             <a href="../Contact/contac.html" class="navbar-link">Contact</a>
         </div>
+
+        <div class="project project-child-page ">
+            <div class="project-text">
+                <h2>A fun festival game</h2>
+                <h2 class="subtitle">| Santa cross the street</h2>
+                <span>A simple game created with Python and pyglet for the holiday season.</span>
+                <br>
+                <a href="../02_page_santa_game.html">
+                    <button>View Project</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/01_Santa_Game.jpg" class="project-image"/>
+            </div>
+        </div>
     </body>
 </html>
