--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
             <a href="./Contact/contac.html" class="navbar-link">Contact</a>
         </div>
         <div class="intro">
-            <div class="intro-title">
+            <span class="intro-title">
                 <h1>Hello & welcome!</h1>
-            </div>
-            <div class="intro-image" >
-                <img class="profile-image" src="./Images/PeipeiSun_small.jpg" alt="profile image">
-            </div>
-            <div class="intro-text">
+            </span>
+            <span class="intro-image" >
+                <img class="profile-image" src="./Images/PeipeiSun_ProfilePhoto.jpg" alt="profile image">
+            </span>
+            <span class="intro-text">
                 <p class="">I'm Lipeipei Sun, a current master's student in Computer Science at Northeastern University, embarking on an exciting journey that bridges the creative world of architecture with the innovative realm of technology.</p>
+            </span>
+        </div>
+        <div class="project">
+            <div class="project-text">
+                <h2>A fun festival game</h2>
+                <h2 class="subtitle">| Santa cross the street</h2>
+                <span>A simple game created with Python and pyglet for the holiday season.</span>
+                <br>
+                <a href="./02_page_santa_game.html">
+                    <button>View Project</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="./Images/01_Santa_Game.jpg" class="project-image"/>
             </div>
         </div>
+        
     </body>
 </html>
