update to make it mobile responsive

--- a/Code/code.html
+++ b/Code/code.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8"> 
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Lipeipei Sun</title>
         <link rel="stylesheet" href="../style.css">
     </head>
@@ -20,7 +20,7 @@
                 <h2 class="subtitle">| Santa cross the street</h2>
                 <span>A simple game created with Python and pyglet for the holiday season.</span>
                 <br>
-                <a href="../02_page_santa_game.html">
+                <a href="https://github.com/sunlipeipei/Santa-Game">
                     <button>View Project</button>
                 </a>
             </div>
