updates to design and code pages

--- a/Code/code.html
+++ b/Code/code.html
@@ -21,11 +21,27 @@
                 <span>A simple game created with Python and pyglet for the holiday season.</span>
                 <br>
                 <a href="https://github.com/sunlipeipei/Santa-Game">
-                    <button>View Project</button>
+                    <button>Source Code</button>
                 </a>
             </div>
             <div class="project-image-contener">
                 <img src="../Images/01_Santa_Game.jpg" class="project-image"/>
+            </div>
+        </div>
+        <div class="project project-child-page ">
+            <div class="project-text">
+                <h2>Layouts and optimization</h2>
+                <h2 class="subtitle">| building exterior</h2>
+                <span>The objective of this project is to analyze and optimize the layout of wall panels and windows on a building facade,
+                    incorporating both performance requirements and aesthetic preferences. The project employed discrete mathematics, with a
+                    focus on combinatorics and probability, to systematically explore layout options.</span>
+                <br>
+                <a href="https://github.com/sunlipeipei/Building-Facade-Layouts-and-Optimization">
+                    <button>Source Code</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/02_Pattern Studies feature image.png" class="project-image"/>
             </div>
         </div>
     </body>
