--- a/Design/design.html
+++ b/Design/design.html
@@ -13,5 +13,38 @@
             <a href="../Design/design.html" class="navbar-link"><strong>Design</strong></a>
             <a href="../Contact/contac.html" class="navbar-link">Contact</a>
         </div>
+
+        <div class="project project-child-page ">
+            <div class="project-text">
+                <h2>Architecture</h2>
+                <h2 class="subtitle">| UW Health Sciences Education Building</h2>
+                <span>The Health Sciences Education Building provides learning spaces to foster
+                    interaction, collaboration, and creativity. I have focused on designing and
+                    developing technical documents for building exterior envelopes as well as flexible,
+                    open learning spaces.</span>
+                <br>
+                <a href="https://aiawa.org/portfolio/health-sciences-education-building/">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/03_UW HSEB.jpg" class="project-image"/>
+            </div>
+        </div>
+
+        <div class="project project-child-page ">
+            <div class="project-text">
+                <h2>Creative storytelling</h2>
+                <h2 class="subtitle">| living upon the history</h2>
+                <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
+                <br>
+                <a href="https://aiaseattle.submittable.com/gallery/9dc5f1f0-4c85-4e9f-b1ab-befed497457c/14072040/">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/04_LUH.jpeg" class="project-image"/>
+            </div>
+        </div>
     </body>
 </html>
