--- a/index.html
+++ b/index.html
@@ -31,13 +31,59 @@
                 <span>A simple game created with Python and pyglet for the holiday season.</span>
                 <br>
                 <a href="https://github.com/sunlipeipei/Santa-Game">
-                    <button>View Project</button>
+                    <button>Source Code</button>
                 </a>
             </div>
             <div class="project-image-contener">
                 <img src="./Images/01_Santa_Game.jpg" class="project-image"/>
             </div>
         </div>
-        
+        <div class="project">
+            <div class="project-text">
+                <h2>Layouts and optimization</h2>
+                <h2 class="subtitle">| building exterior</h2>
+                <span>The objective of this project is to analyze and optimize the layout of wall panels and windows on a building facade,
+                    incorporating both performance requirements and aesthetic preferences. The project employed discrete mathematics, with a
+                    focus on combinatorics and probability, to systematically explore layout options.</span>
+                <br>
+                <a href="https://github.com/sunlipeipei/Building-Facade-Layouts-and-Optimization">
+                    <button>Source Code</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="./Images/02_Pattern Studies feature image.png" class="project-image"/>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-text">
+                <h2>Architecture</h2>
+                <h2 class="subtitle">| UW Health Sciences Education Building</h2>
+                <span>The Health Sciences Education Building provides learning spaces to foster
+                    interaction, collaboration, and creativity. I have focused on designing and
+                    developing technical documents for building exterior envelopes as well as flexible,
+                    open learning spaces.</span>
+                <br>
+                <a href="https://aiawa.org/portfolio/health-sciences-education-building/">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="./Images/03_UW HSEB.jpg" class="project-image"/>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-text">
+                <h2>Creative storytelling</h2>
+                <h2 class="subtitle">| living upon the history</h2>
+                <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
+                <br>
+                <a href="https://aiaseattle.submittable.com/gallery/9dc5f1f0-4c85-4e9f-b1ab-befed497457c/14072040/">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="./Images/04_LUH.jpeg" class="project-image"/>
+            </div>
+        </div>
     </body>
 </html>
