--- a/Contact/contac.html
+++ b/Contact/contac.html
@@ -13,5 +13,65 @@
             <a href="../Design/design.html" class="navbar-link">Design</a>
             <a href="../Contact/contac.html" class="navbar-link"><strong>Contact</strong></a>
         </div>
+
+        <div class="intro">
+            <span class="intro-image" >
+                <img class="profile-image" src="../Images/PeipeiSun_ProfilePhoto.jpg" alt="profile image">
+            </span>
+            <a href="../Images/Resume Lipeipei Sun.pdf">
+                <button>View Resume</button>
+            </a>
+        </div>
+
+        <div class="project">
+            <div class="about-me-text">
+                <h2>About Me</h2>
+                <p>
+                Hello! I'm Lipeipei Sun, a current master's student in Computer Science at Northeastern University, embarking on an exciting journey that bridges the creative world of architecture with the innovative realm of technology.</p>
+                <p>
+                My story begins at the University of Washington, where I delved into the intricate art of architecture. There, I discovered the power of design in shaping our environments and impacting lives. As an architect, I was drawn to challenges, often finding myself at the forefront of pioneering designs. One of my notable projects included the innovative facade of the Health Science Education Building at the University of Washington. This project wasn't just about aesthetics; it was a complex puzzle of functionality, beauty, and innovation.
+                </p>
+                <p>
+                However, as technology continued to revolutionize every aspect of our lives, I realized the vast potential of computer science in enhancing and transforming the field of design. This realization ignited my transition into tech. I saw an opportunity to blend my architectural expertise with cutting-edge technology to push the boundaries of design and creativity.
+                </p>
+                <p>
+                At Northeastern University, through the Align Master's Program, I am diving into the depths of computer science. Here, I am not just learning to code; I am exploring how to innovate, how to transform abstract ideas into tangible solutions, and how to apply a user-centered approach to technology.
+                </p>
+                <p>
+                My journey is a testament to the power of interdisciplinary learning and the magic that happens when you combine passion with technology. Join me as I explore this new frontier, where architecture meets computer science, and where imagination meets innovation.
+                </p>
+            </div>
+            <div class="contact-info" >
+                <table>                    
+                    <tbody>
+                        <tr>
+                            <td>
+                                Email
+                            </td>
+                            <td>
+                                <strong>Lipeipei Sun</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Phone
+                            </td>
+                            <td>
+                                <strong>206-409-6632</strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Github
+                            </td>
+                            <td>
+                                <strong><a href="https://github.com/sunlipeipei" > Link to Github</a></strong>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </body>
 </html>
