--- a/Code/code.html
+++ b/Code/code.html
@@ -7,12 +7,12 @@
     </head>
 
     <body>
-        <div class="navbar">
+        <nav class="navbar">
             <a href="../index.html" class="navbar-link">Home</a>
             <a href="../Code/code.html" class="navbar-link"><strong>Code</strong></a>
             <a href="../Design/design.html" class="navbar-link">Design</a>
             <a href="../Contact/contac.html" class="navbar-link">Contact</a>
-        </div>
+        </nav>
 
         <div class="project project-child-page ">
             <div class="project-text">
@@ -28,6 +28,7 @@
                 <img src="../Images/01_Santa_Game.jpg" class="project-image"/>
             </div>
         </div>
+        
         <div class="project project-child-page ">
             <div class="project-text">
                 <h2>Layouts and optimization</h2>
@@ -42,6 +43,21 @@
             </div>
             <div class="project-image-contener">
                 <img src="../Images/02_Pattern Studies feature image.png" class="project-image"/>
+            </div>
+        </div>
+
+        <div class="project project-child-page ">
+            <div class="project-text">
+                <h2>Research</h2>
+                <h2 class="subtitle">| Persona-L</h2>
+                <span>This project explores a novel approach for creating personas using Large Language Models (LLMs) and an ability-based framework, specifically designed to improve the representation of users with complex needs.</span>
+                <br>
+                <a href="https://arxiv.org/html/2409.15604v1">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/06_InteractivePersona.jpeg" class="project-image"/>
             </div>
         </div>
     </body>
