--- a/Contact/contac.html
+++ b/Contact/contac.html
@@ -7,12 +7,12 @@
     </head>
 
     <body>
-        <div class="navbar">
+        <nav class="navbar">
             <a href="../index.html" class="navbar-link">Home</a>
             <a href="../Code/code.html" class="navbar-link">Code</a>
             <a href="../Design/design.html" class="navbar-link">Design</a>
             <a href="../Contact/contac.html" class="navbar-link"><strong>Contact</strong></a>
-        </div>
+        </nav>
 
         <div class="intro">
             <span class="intro-image" >
@@ -49,23 +49,24 @@
                                 Email
                             </td>
                             <td>
-                                <strong>Lipeipei Sun</strong>
+                                <strong>sunlipeipei@gmail.com</strong>
                             </td>
                         </tr>
-                        <tr>
-                            <td>
-                                Phone
-                            </td>
-                            <td>
-                                <strong>206-409-6632</strong>
-                            </td>
-                        </tr>
+                        
                         <tr>
                             <td>
                                 Github
                             </td>
                             <td>
                                 <strong><a href="https://github.com/sunlipeipei" > Link to Github</a></strong>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                LinkedIn
+                            </td>
+                            <td>
+                                <strong><a href="https://www.linkedin.com/in/lipeipei-peipei-sun/">LinkedIn</strong>
                             </td>
                         </tr>
                     </tbody>
