--- a/Design/design.html
+++ b/Design/design.html
@@ -7,12 +7,12 @@
     </head>
 
     <body>
-        <div class="navbar">
+        <nav class="navbar">
             <a href="../index.html" class="navbar-link">Home</a>
             <a href="../Code/code.html" class="navbar-link">Code</a>
             <a href="../Design/design.html" class="navbar-link"><strong>Design</strong></a>
             <a href="../Contact/contac.html" class="navbar-link">Contact</a>
-        </div>
+        </nav>
 
         <div class="project project-child-page ">
             <div class="project-text">
@@ -36,7 +36,8 @@
             <div class="project-text">
                 <h2>Creative storytelling</h2>
                 <h2 class="subtitle">| living upon the history</h2>
-                <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
+                <span>Our lives are built upon the accumulated history of places we’ve lived in. Each
+                    layer of time tells a story, and informs the future.</span>
                 <br>
                 <a href="https://aiaseattle.submittable.com/gallery/9dc5f1f0-4c85-4e9f-b1ab-befed497457c/14072040/">
                     <button>Learn More</button>
@@ -44,6 +45,21 @@
             </div>
             <div class="project-image-contener">
                 <img src="../Images/04_LUH.jpeg" class="project-image"/>
+            </div>
+        </div>
+
+        <div class="project project-child-page ">
+            <div class="project-text">
+                <h2>Creative storytelling</h2>
+                <h2 class="subtitle">| never gone, never home</h2>
+                <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
+                <br>
+                <a href="https://millerhull.com/think/never-gone-never-home/">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/05_Never Gone Never Home.jpg" class="project-image"/>
             </div>
         </div>
     </body>
