--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
 
     <body>
-        <div class="navbar">
+        <nav class="navbar">
             <a href="./index.html" class="navbar-link"><strong>Home</strong></a>
             <a href="./Code/code.html" class="navbar-link">Code</a>
             <a href="./Design/design.html" class="navbar-link">Design</a>
             <a href="./Contact/contac.html" class="navbar-link">Contact</a>
-        </div>
+        </nav>
         <div class="intro">
             <span class="intro-title">
                 <h1>Hello & welcome!</h1>
@@ -56,6 +56,20 @@
         </div>
         <div class="project">
             <div class="project-text">
+                <h2>Research</h2>
+                <h2 class="subtitle">| Persona-L</h2>
+                <span>This project explores a novel approach for creating personas using Large Language Models (LLMs) and an ability-based framework, specifically designed to improve the representation of users with complex needs.</span>
+                <br>
+                <a href="https://arxiv.org/html/2409.15604v1">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="./Images/06_InteractivePersona.jpeg" class="project-image"/>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-text">
                 <h2>Architecture</h2>
                 <h2 class="subtitle">| UW Health Sciences Education Building</h2>
                 <span>The Health Sciences Education Building provides learning spaces to foster
@@ -83,6 +97,20 @@
             </div>
             <div class="project-image-contener">
                 <img src="./Images/04_LUH.jpeg" class="project-image"/>
+            </div>
+        </div>
+        <div class="project">
+            <div class="project-text">
+                <h2>Creative storytelling</h2>
+                <h2 class="subtitle">| never gone, never home</h2>
+                <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
+                <br>
+                <a href="https://millerhull.com/think/never-gone-never-home/">
+                    <button>Learn More</button>
+                </a>
+            </div>
+            <div class="project-image-contener">
+                <img src="../Images/05_Never Gone Never Home.jpg" class="project-image"/>
             </div>
         </div>
     </body>
