--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Lipeipei Sun</title>
+        <link rel="icon" type="image/x-icon" href="./Images/favicon_io/favicon.ico">
         <link rel="stylesheet" href="./style.css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
 
     <body>
         <nav class="navbar">
-            <a href="./index.html" class="navbar-link"><strong>Home</strong></a>
-            <a href="./Code/code.html" class="navbar-link">Code</a>
-            <a href="./Design/design.html" class="navbar-link">Design</a>
-            <a href="./Contact/contac.html" class="navbar-link">Contact</a>
+            <img class="icon logo" src="../Images/Personal Logo.png">
+            <a href="." class="navbar-link"><strong>Home</strong></a>
+            <a href="./Code" class="navbar-link">Code</a>
+            <a href="./Design" class="navbar-link">Design</a>
+            <a href="./AboutMe" class="navbar-link">About Me</a>
         </nav>
         <div class="intro">
             <span class="intro-title">
@@ -21,13 +26,13 @@
                 <img class="profile-image" src="./Images/PeipeiSun_ProfilePhoto.jpg" alt="profile image">
             </span>
             <span class="intro-text">
-                <p class="">I'm Lipeipei Sun, a current master's student in Computer Science at Northeastern University, embarking on an exciting journey that bridges the creative world of architecture with the innovative realm of technology.</p>
+                <p class="">I'm Lipeipei (Peipei) Sun, a current master's student in Computer Science at Northeastern University, embarking on an exciting journey that bridges the creative world of architecture with the innovative realm of technology.</p>
             </span>
         </div>
         <div class="project">
             <div class="project-text">
                 <h2>A fun festival game</h2>
-                <h2 class="subtitle">| Santa cross the street</h2>
+                <h2 class="subtitle">Santa cross the street</h2>
                 <span>A simple game created with Python and pyglet for the holiday season.</span>
                 <br>
                 <a href="https://github.com/sunlipeipei/Santa-Game">
@@ -35,13 +40,13 @@
                 </a>
             </div>
             <div class="project-image-contener">
-                <img src="./Images/01_Santa_Game.jpg" class="project-image"/>
+                <img src="./Images/01_Santa_Game.gif" class="project-image"/>
             </div>
         </div>
         <div class="project">
             <div class="project-text">
                 <h2>Layouts and optimization</h2>
-                <h2 class="subtitle">| building exterior</h2>
+                <h2 class="subtitle">building exterior</h2>
                 <span>The objective of this project is to analyze and optimize the layout of wall panels and windows on a building facade,
                     incorporating both performance requirements and aesthetic preferences. The project employed discrete mathematics, with a
                     focus on combinatorics and probability, to systematically explore layout options.</span>
@@ -57,7 +62,7 @@
         <div class="project">
             <div class="project-text">
                 <h2>Research</h2>
-                <h2 class="subtitle">| Persona-L</h2>
+                <h2 class="subtitle">Persona-L</h2>
                 <span>This project explores a novel approach for creating personas using Large Language Models (LLMs) and an ability-based framework, specifically designed to improve the representation of users with complex needs.</span>
                 <br>
                 <a href="https://arxiv.org/html/2409.15604v1">
@@ -71,7 +76,7 @@
         <div class="project">
             <div class="project-text">
                 <h2>Architecture</h2>
-                <h2 class="subtitle">| UW Health Sciences Education Building</h2>
+                <h2 class="subtitle">UW Health Sciences Education Building</h2>
                 <span>The Health Sciences Education Building provides learning spaces to foster
                     interaction, collaboration, and creativity. I have focused on designing and
                     developing technical documents for building exterior envelopes as well as flexible,
@@ -88,7 +93,7 @@
         <div class="project">
             <div class="project-text">
                 <h2>Creative storytelling</h2>
-                <h2 class="subtitle">| living upon the history</h2>
+                <h2 class="subtitle">living upon the history</h2>
                 <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
                 <br>
                 <a href="https://aiaseattle.submittable.com/gallery/9dc5f1f0-4c85-4e9f-b1ab-befed497457c/14072040/">
@@ -102,7 +107,7 @@
         <div class="project">
             <div class="project-text">
                 <h2>Creative storytelling</h2>
-                <h2 class="subtitle">| never gone, never home</h2>
+                <h2 class="subtitle">never gone, never home</h2>
                 <span>This project explores the juxtaposition of two distinct worlds: the futuristic, uniform Cube City suspended above Earth to escape relentless earthquakes, and a vibrant, close-knit community on Earth's surface, emphasizing themes of memory, identity, and the human connection to place.</span>
                 <br>
                 <a href="https://millerhull.com/think/never-gone-never-home/">
