--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <body>
         <nav class="navbar">
-            <img class="icon logo" src="../Images/Personal Logo.png">
-            <a href="." class="navbar-link"><strong>Home</strong></a>
+            <a href=".."><img class="icon logo" src="../Images/Personal Logo.png" ></a>
+            <a href="./" class="navbar-link"><strong>Home</strong></a>
             <a href="./Code" class="navbar-link">Code</a>
             <a href="./Design" class="navbar-link">Design</a>
             <a href="./AboutMe" class="navbar-link">About Me</a>
