minor adjustment to About Me text

--- a/AboutMe/index.html
+++ b/AboutMe/index.html
@@ -44,7 +44,7 @@
                 At Northeastern University, through the Align Master's Program, I am diving into the depths of computer science. Here, I am not just learning to code; I am exploring how to innovate, how to transform abstract ideas into tangible solutions, and how to apply a user-centered approach to technology.
                 </p>
                 <p>
-                My showcases is a testament to the power of interdisciplinary learning and the magic that happens when you combine passion with technology. Join me as I explore this new frontier, where architecture meets computer science, and where imagination meets innovation.
+                My journey showcases the power of interdisciplinary learning and the magic that happens when you combine passion with technology. Join me as I explore this new frontier, where architecture meets computer science, and where imagination meets innovation.
                 </p>
             </div>
 
